--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,15 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body{
-  background-color: #F8F8F8;
+body {
+  background-color: #f8f8f8;
 }
 
+.room {
+  background-image: url("https://cdn.pixabay.com/photo/2020/07/15/08/40/deer-5406930__340.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 180px;
+}
