--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,12 @@ body {
   width: 100%;
   height: 180px;
 }
+
+.blueOpacityBackground{
+  background-image: url("https://demo01.houzez.co/wp-content/uploads/2016/03/205.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
