--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,29 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.kitchen{
+  background-image: url("https://432351-1355223-raikfcquaxqncofqfm.stackpathdns.com/wp-content/uploads/2020/03/206-1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 620px;
+}
+.kitchen2{
+  background-image: url("https://432351-1355223-raikfcquaxqncofqfm.stackpathdns.com/wp-content/uploads/2016/03/013.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 620px;
+}
+.kitchen3{
+  background-image: url("https://432351-1355223-raikfcquaxqncofqfm.stackpathdns.com/wp-content/uploads/2016/03/006.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 620px;
+}
+
